fixed menu buttons in create activity

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="exit">Exit</string>
     <string name="undo">Undo</string>
     <string name="redo">Redo</string>
-    
+    <string name="confirm">Confirm</string>
+    <string name="cancel">Cancel</string>
 
 </resources>
