--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,5 +13,9 @@
     <string name="redo">Redo</string>
     <string name="confirm">Confirm</string>
     <string name="cancel">Cancel</string>
+    <string name="menu_settings">Settings</string>
+    <string name="title_activity_main">GridView with Images</string>
+    <string name="img_description">Image Description</string>
+    <string name="img_original_description">Original Image Description</string>
 
 </resources>
